docs/docusaurus/versions/version-4.2.0/zh-CN/source/3.quick-start/1.preparation.md
# 快速上手

> 此文档主要用于新用户快速上手，其中包含了 TuGraph 的简介、特征、安装和使用。

## 1.简介

TuGraph 是蚂蚁集团自主研发的大规模图计算系统，提供图数据库引擎和图分析引擎。其主要特点是大数据量存储和计算，高吞吐率，以及灵活的 API，同时支持高效的在线事务处理（OLTP）和在线分析处理（OLAP）。 LightGraph、GeaGraph 是 TuGraph 的曾用名。

主要功能特征包括：

- 标签属性图模型
- 支持多图
- 完善的 ACID 事务处理
- 内置 34 图分析算法
- 基于 web 客户端的图可视化工具
- 支持 RESTful API 和 RPC
- OpenCypher 图查询语言
- 基于 C++/Python/Java 的存储过程
- 适用于高效图算法开发的 Traversal API

性能及可扩展性特征包括：

- TB 级大容量
- 千万点/秒的高吞吐率
- 高可用性支持
- 高性能批量导入
- 在线/离线备份


### 1.1.支持的平台

TuGraph 无论是物理、虚拟还是容器化环境，均支持 X86_64 和 ARM64 架构的的平台。

### 1.2.硬件要求

_目前我们建议用户使用 NVMe SSD 配合较大的内存配置以获取最佳性能。_

| 硬件   | 最低配置      | 建议配置                     |
|------|-----------|--------------------------|
| CPU  | X86_64    | Xeon E5 2670 v4          |
| 内存   | 4GB       | 256GB                    |
| 硬盘   | 100GB     | 1TB NVMe SSD             |
| 操作系统 | Linux 2.6 | Ubuntu 18.04, CentOS 7.3 |

## 2.安装

TuGraph 可以通过 Docker Image 快速安装，或者通过 rpm/deb 包本地安装。另外TuGraph在阿里云计算巢上提供了社区版服务，您无需自行购置云主机，即可在计算巢上快速部署TuGraph服务、实现运维监控，从而搭建您自己的图应用。

> 安装包/镜像下载：参考[下载地址](../1.guide.md)中的“TuGraph最新版本”章节。

> 计算巢部署：可以在阿里云计算巢自行搜索，也可以通过[部署链接]( ../5.installation&running/5.cloud-deployment.md )快速访问。

### 2.1.通过docker快速体验

1. 本地安装 docker 环境

   参考 docker 官方文档：https://docs.docker.com/get-started/

2. 拉取镜像
   ```shell
   docker pull tugraph/tugraph-runtime-centos7
   ```

3. 启动docker
   ```shell
    docker run -it -d -p 7001:7001 -p 7070:7070 -p 7687:7687 -p 8000:8000 -p 8888:8888 -p 8889:8889 -p 9090:9090 \
    -v /root/tugraph/data:/var/lib/lgraph/data  -v /root/tugraph/log:/var/log/lgraph_log \
    --name tugraph_demo tugraph/tugraph-runtime-centos7:${VERSION} /bin/bash
   
   docker exec -d tugraph_demo bash /setup.sh
   # 8000是默认的http端口，访问tugraph-db-browser使用。
   # 7070是默认的http端口，访问legacy tugraph-web访问使用。
   # 7687是bolt端口，bolt client访问使用。
   # 9090是默认的rpc端口，rpc client访问使用。
   
   # 根据/usr/local/etc/lgraph.json的tugraph启动的默认配置，
   # /var/lib/lgraph/data是容器内的默认数据目录，/var/log/lgraph_log是容器内的默认日志目录
   # 命令将数据目录和日志目录挂载到了宿主机的/root/tugraph/上进行持久化，您可以根据实际情况修改。
   ```

4. 前端访问

访问tugraph-db-browser: `http://x.x.x.x:8000`，默认用户名为 `admin`，密码为 `73@TuGraph`。
首次登录会默认跳转修改密码页面，请尽快修改默认密码避免安全风险。

**注意**：
如果需要使用legacy tugraph-web，访问`http://x.x.x.x:7070`，默认用户名为 `admin`，密码为 `73@TuGraph`。 
但请注意，legacy web是不再维护的版本，建议使用tugraph-db-browser。